Builds as static library now (libflamingo.a). This will make it much easier to develop on OS X.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 /lib/
 .DS_STORE
 .DS_STORE?
+*.swp
+
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+*.xcuserstate
+project.xcworkspace/
+xcuserdata/
+
