Added support for PhysicsFS so games can easily load files. This is mainly useful right now for running .apps.

--- a/test/FlamingoTest/makefile
+++ b/test/FlamingoTest/makefile
@@ -1,6 +1,6 @@
 CC=clang++
 CFLAGS=-Wall -I../../include
-LDFLAGS=`sdl-config --cflags --libs` -framework OpenGL -L../../lib -lflamingo -lIL
+LDFLAGS=`sdl-config --cflags --libs` -framework OpenGL -L../../lib -lflamingo -lIL -lphysfs
 
 TARGET   = FlamingoTest
 SRCEXT   = cpp
