More tweaking of bundling the app. Should work better now.

--- a/test/FlamingoTest/makefile
+++ b/test/FlamingoTest/makefile
@@ -1,6 +1,6 @@
 CC=clang++
-CFLAGS=-Wall -I../../include
-LDFLAGS=`sdl-config --cflags --libs` -framework OpenGL -L../../lib -lflamingo -lIL -lphysfs
+CFLAGS=-Wall -I../../include -I/Library/Frameworks/SDL.framework/Headers
+LDFLAGS=-framework SDL -framework OpenGL -framework Cocoa -L../../lib -lflamingo -lIL -lphysfs
 
 TARGET   = FlamingoTest
 SRCEXT   = cpp
@@ -10,7 +10,8 @@ SRCS     := $(shell find . -name '*.$(SRCEXT)')
 all: $(TARGET)
 
 $(TARGET): clean
-	$(CC) $(SRCS) $(CFLAGS) $(LDFLAGS) -o $@
+	@ln -s ../../lib/ ./lib
+	$(CC) $(SRCS) SDLMain.m $(CFLAGS) $(LDFLAGS) -o $@
 
 clean:
 	@$(RM) -rf lib
