Completely revamped the EntityManager so that Components don't have logic, only data. This involved implementing the EventManager and EntitySystem. After a lot of time chasing one stupid bug, everything appears to be working fine.

--- a/test/FlamingoTest/makefile
+++ b/test/FlamingoTest/makefile
@@ -10,8 +10,10 @@ SRCS     := $(shell find . -name '*.$(SRCEXT)')
 all: $(TARGET)
 
 $(TARGET): clean
+	@ln -s ../../lib lib
 	$(CC) $(SRCS) SDLMain.m $(CFLAGS) $(LDFLAGS) -o $@
 
 clean:
+	@$(RM) -rf lib
 	@$(RM) -f $(TARGET)
 
