Fixed the .gitignore so that it recognizes python/flamingo/components/__init__.py

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ xcuserdata/
 /python/flamingo/*
 !/python/flamingo/__init__.py
 !/python/flamingo/script.py
+!/python/flamingo/components/
 /python/flamingo/components/*
 !/python/flamingo/components/__init__.py
 
