Added InputEvent type and a SWIG wrapper for it. This is the EventData type that will be used to pass input information from the InputSystem to the python InputManager.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ xcuserdata/
 /lib/
 /swig/*.cxx
 /swig/components/*.cxx
+/swig/events/*.cxx
 /python/flamingo/*
 !/python/flamingo/__init__.py
 !/python/flamingo/script.py
