--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ xcuserdata/
 /python/flamingo/*
 !/python/flamingo/__init__.py
 !/python/flamingo/script.py
+!/python/flamingo/inputmanager.py
 !/python/flamingo/components/
 /python/flamingo/components/*
 !/python/flamingo/components/__init__.py
